# Low-Latency-Trading-Engine

Computing-Server/: CMakeLists.txt
Computing-Server/include/AlgoEngine-Core/Reinforcement_models/: Agent_Deep_Q-Learning.hpp  Agent_QNetwork.hpp  Deep_Q-Learning.hpp  QNetwork.hpp
Computing-Server/include/AlgoEngine-Core/algorithm/: ADX.hpp  APO.hpp  ATR.hpp  BollingerBands.hpp  CCI.hpp  DividendYield.hpp  EMA.hpp  FibonacciRetracement.hpp  MA.hpp  MFI.hpp  OBV.hpp  PERatio.hpp  RSI.hpp  SMA.hpp  StochasticOscillator.hpp  VWAP.hpp
Computing-Server/include/AlgoEngine-Core/indicator/: Indicator.hpp
Computing-Server/include/AlgoEngine-Core/statistical_models/: BayesianAnomalyDetection.hpp  BayesianCausalInferenceTrading.hpp  BayesianCorrelationEstimation.hpp  BayesianDecisionTreeTrading.hpp  BayesianGARCHTrading.hpp  BayesianKernelRegression.hpp  BayesianModelAveragingTrading.hpp  BayesianMomentumTrading.hpp  BayesianSVM.hpp  BayesianStochasticVolatility.hpp  BayesianTrendDetection.hpp
Computing-Server/include/AlgoEngine-Core/time_series_models/: ARIMA.hpp  GARCH.hpp  SARIMA.hpp  VAR.hpp
Computing-Server/include/Data-Fetcher-Core/: DataFetcher-Sub.hpp  DataFetcher.hpp  WebSocket.hpp
Computing-Server/include/IO-Broker-Core/: RedisDBManager.hpp
Computing-Server/include/Order-Manager-Core/: APIClient.hpp  order.hpp  order_manager.hpp
Computing-Server/include/Orderbook/: order_.hpp  order_book.hpp  transactions.hpp
Computing-Server/include/Risk-Analysis-Core/: CorrelationAnalyzer.hpp  PortfolioManager.hpp  RiskAdjustedMetrics.hpp  VaRCalculator.hpp
Computing-Server/include/Utilities/: Bar.hpp  Logger.hpp  ModelTransfer.hpp  OHLCV.hpp  Quote.hpp  ReplayMemory.hpp  SignalResult.hpp  Trade.hpp  Utilities.hpp
Computing-Server/include/Velocity-Bot/: bot.hpp
Computing-Server/src/: main.cpp
Computing-Server/src/AlgoEngine-Core/Reinforcement_models/: Agent_Deep_Q-Learning.cpp  Agent_QNetwork.cpp  Deep_Q-Learning.cpp  QNetwork.cpp
Computing-Server/src/AlgoEngine-Core/indicators/: ADX.cpp  APO.cpp  ATR.cpp  BollingerBands.cpp  CCI.cpp  DividendYield.cpp  EMA.cpp  FibonacciRetracement.cpp  MA.cpp  MFI.cpp  OBV.cpp  PERatio.cpp  RSI.cpp  SMA.cpp  StochasticOscillator.cpp  VWAP.cpp
Computing-Server/src/AlgoEngine-Core/statistical models/: BayesianAnomalyDetection.cpp  BayesianCausalInferenceTrading.cpp  BayesianCorrelationEstimation.cpp  BayesianDecisionTreeTrading.cpp  BayesianGARCHTrading.cpp  BayesianKernelRegression.cpp  BayesianModelAveragingTrading.cpp  BayesianMomentumTrading.cpp  BayesianSVM.cpp  BayesianStochasticVolatility.cpp  BayesianTrendDetection.cpp
Computing-Server/src/AlgoEngine-Core/time_series_models/: ARIMA.cpp  GARCH.cpp  SARIMA.cpp  VAR.cpp
Computing-Server/src/Backtesting-Bot/: OrderBook-Bot.cpp  bot.cpp
Computing-Server/src/Data-Fetcher-Core/: DataFetcher-Sub.cpp  DataFetcher.cpp  Websocket.cpp
Computing-Server/src/IO-Broker-Core/: RedisDBManager.cpp
Computing-Server/src/Order-Manager-Core/: order.cpp  order_manager.cpp
Computing-Server/src/Orderbook/: order_.cpp  order_book.cpp  transactions.cpp
Computing-Server/src/Risk-Analysis-Core/: CorrelationAnalyzer.cpp  PortfolioManager.cpp  RiskAdjustedMetrics.cpp  VaRCalculator.cpp
Computing-Server/src/Utilities/: Logger.cpp  Utilities.cpp
Computing-Server/src/Velocity-Bot/strategies/: Mean-Reversion-Strategy.cpp  Reversal-Strategy-Fibonacci-Retracement.cpp  Trend-Following-Strategy.cpp  Volatility-Breakout-Strategy.cpp
Computing-Server/src/Velocity-Bot/test/: OrderBook-Bot.cpp  bot.cpp  multi-provider.cpp
DataBroker-Server/: CMakeLists.txt
DataBroker-Server/include/Fetcher/: DataFetcher.hpp
DataBroker-Server/include/Providers/: Alapca.hpp  Ploygon.hpp  TwelveData.hpp
DataBroker-Server/include/Utilities/: Bar.hpp  OHLCV.hpp  Quote.hpp  Trade.hpp
DataBroker-Server/include/WebSockets/: Sockets.hpp
DataBroker-Server/src/: main.cpp
DataBroker-Server/src/Providers/: Alapca.cpp  Ploygon.cpp  TwelveData.cpp
DataBroker-Server/src/WebSockets/: Sockets.cpp
IO-Server/: CMakeLists.txt
IO-Server/src/: subscriber.cpp
Monitoring-Server/: app.py
Monitoring-Server/Front-End/: index.html  package.json  vite.config.ts
Monitoring-Server/Front-End/src/components/sections/dashboard/balance/: BalanceChart.tsx  index.tsx
Monitoring-Server/Front-End/src/components/sections/dashboard/top-cards/: index.tsx
Monitoring-Server/Front-End/src/components/sections/dashboard/top-cards/Total_Trades/: index.tsx
Monitoring-Server/Front-End/src/components/sections/dashboard/top-cards/earnings/: index.tsx
Monitoring-Server/Front-End/src/components/sections/dashboard/top-cards/spent/: index.tsx
Monitoring-Server/Front-End/src/components/sections/dashboard/transaction-history/: ActionMenu.tsx  TransactionHistoryTable.tsx  index.tsx
Monitoring-Server/Front-End/src/layouts/main-layout/sidebar/: DrawerItems.tsx
Monitoring-Server/Front-End/src/layouts/main-layout/sidebar/list-items/: ListItem.tsx
Monitoring-Server/Front-End/src/layouts/main-layout/topbar/: index.tsx
Monitoring-Server/Front-End/src/routes/: paths.ts  router.tsx  sitemap.ts
Order-Manager-Server/: CMakeLists.txt
Order-Manager-Server/include/Executor-Manager-Core/: APIClient.hpp  OrderDetails.hpp  executor_manager.hpp
Order-Manager-Server/include/Queue/: TSQueue.hpp
Order-Manager-Server/include/Scheduler/: scheduler.hpp
Order-Manager-Server/src/: main.cpp
Order-Manager-Server/src/Executor-Manager-Core/: executor_manager.cpp  order.cpp
Order-Manager-Server/src/Scheduler/: scheduler.cpp
